# obsidian_journal

./: .env.example  CLAUDE.md  README.md  pyproject.toml
src/obsidian_journal/: cli.py  config.py  models.py  output.py  vault.py
src/obsidian_journal/journal/: capture.py  prompts.py  synthesize.py
src/obsidian_journal/organize/: analyze.py  frontmatter.py  links.py  structure.py
src/obsidian_journal/plan/: capture.py  parse.py  prompts.py  synthesize.py  weather.py
src/obsidian_journal/spec/: prompt.py  synthesize.py
tests/: test_json_output.py  test_models.py  test_query.py  test_vault.py
tests/spec/: test_spec.py
